<resources>
    <string name="app_name">Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NavigationDrawer menu -->
    <string name="title_general">General</string>
    <string name="title_additional">Additional</string>
    <string name="title_other">Other</string>
    <string name="title_notes">Notes</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share the app</string>
    <string name="title_tags">Labels</string>
    <string name="title_trash">Trash</string>
    <string name="title_help">Help</string>

    <!-- DashboardNotesFragment -->
    <string name="you_have_no_notes">You have no notes</string>
    <string name="you_have_no_favorite_notes">You have no favorite notes</string>
    <string name="no_notes_found">No match found</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>

    <!-- DashboardRemindersFragment -->
    <string name="you_have_no_reminders">You have no active reminders</string>
    <string name="you_have_no_completed_reminders">You have no completed reminders</string>
    <string name="empty_completed_reminders">Empty completed reminders</string>
    <string name="restore_reminders_impossible">It will not be possible to recover these reminders.</string>
    <string name="restore_reminder_impossible">It will not be possible to recover this reminder.</string>
    <string name="active_reminders">Active</string>
    <string name="remind_me_at">Remind me at</string>
    <string name="completed_reminders">Completed</string>

    <!-- FilterFragment -->
    <string name="filter">Filter</string>
    <string name="apply_filter">Apply filter</string>
    <string name="reset_filter">Reset filter</string>
    <string name="union_conditions">Combined conditions</string>
    <string name="only_with_picture">Only with picture</string>
    <string name="only_locked_notes">Only locked notes</string>

    <!-- DashboardTagsFragment -->
    <string name="you_have_no_tags">You have no labels</string>
    <string name="empty_tag_error">Label is empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="background">Background</string>
    <string name="create_new_tag">Create new label</string>
    <string name="alert_dialog_delete_tag_title">Warning</string>
    <string name="alert_dialog_delete_tag_message">This label will be removed from all your notes. Your notes won\'t be deleted.</string>

    <!-- TrashFragment -->
    <string name="restore_notes_impossible">It will not be possible to recover these notes.</string>
    <string name="trash_is_empty">Trash is empty</string>
    <string name="empty_trash">Empty trash</string>
    <string name="what_to_do">What to do?</string>
    <string name="notes_selected">notes selected</string>
    <string name="restore">Restore</string>

    <!-- AddEditNoteActivity -->
    <string name="tag">Label</string>
    <string name="color">Color</string>
    <string name="add_note">Add note</string>
    <string name="start_writing">What\'s new?</string>
    <string name="empty_note_error">Note is empty</string>
    <string name="select_a_file">Select a media file</string>
    <string name="delete_image">Delete image</string>
    <string name="add_image">Add image</string>
    <string name="image">Image</string>
    <string name="favorite">Favorite</string>
    <string name="pin_code_saved">PIN code successfully saved</string>
    <string name="text_is_empty">Write something</string>
    <string name="exit">Exit</string>
    <string name="select_image">Add image</string>
    <string name="select_color">Change color</string>
    <string name="select_date">Select date</string>
    <string name="select_label">Attach label</string>
    <string name="share_note">Share note</string>
    <string name="favorite_note">Favorite note</string>
    <string name="unfavorite_note">Unfavorite note</string>
    <string name="lock_note">Lock note</string>
    <string name="unlock_note">Unlock note</string>
    <string name="share_blank_note">You can not share a blank note</string>

    <!-- AddEditReminderActivity -->
    <string name="create_reminder">Create reminder</string>
    <string name="create">Create</string>
    <string name="empty_reminder">You can not add empty reminder</string>
    <string name="remind_me_to">Remind me to…</string>

    <!-- Messages -->
    <string name="error_message">An error occurred. Try again</string>
    <string name="tag_has_been_deleted">Label has been deleted</string>
    <string name="reminder_has_been_deleted">Reminder has been deleted</string>
    <string name="reminders_has_been_deleted">Completed reminders has been deleted</string>
    <string name="note_has_been_deleted">Note has been removed</string>

    <!-- Other -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="search_hint">Search…</string>
    <string name="undo">Undo</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="tags">Labels</string>
    <string name="colors">Colors</string>
    <string name="dropdown">Dropdown</string>
    <string name="share">Share</string>
    <string name="send_via">Send via</string>
    <string name="back">Back</string>
    <string name="title_todo_lists">To-Do lists</string>
    <string name="clock">Clock</string>
    <string name="lock">Lock</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="calendar">Calendar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="pin">Pin</string>
    <string name="more">More</string>
    <string name="complete">Complete</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="unpin">Unpin</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title">Title</string>

    <string-array name="repeat_types">
        <item>Once</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>
