<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/title_general">
        <menu>
            <group
                android:id="@+id/group_general"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notes"
                    android:icon="@drawable/ic_action_note"
                    android:title="@string/title_notes" />
                <item
                    android:id="@+id/nav_favorites"
                    android:icon="@drawable/ic_action_star"
                    android:title="@string/title_favorites" />
                <item
                    android:id="@+id/nav_tags"
                    android:icon="@drawable/ic_action_label"
                    android:title="@string/title_tags" />
                <item
                    android:id="@+id/nav_trash"
                    android:icon="@drawable/ic_action_trash"
                    android:title="@string/title_trash" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_additional">
        <menu>
            <group
                android:id="@+id/group_additional"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_reminders"
                    android:icon="@drawable/ic_action_reminder"
                    android:title="@string/title_reminders" />
                <item
                    android:id="@+id/nav_todo_lists"
                    android:icon="@drawable/ic_action_todo_lists"
                    android:title="@string/title_todo_lists" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_action_help"
                android:title="@string/title_help" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/title_share" />
        </menu>
    </item>
</menu>
