<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="rmnvich.apps.notes.presentation.ui.fragment.notes.DashboardNotesViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/filter_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="0dp"
                app:layout_scrollFlags="scroll|snap"
                app:navigationIcon="@drawable/ic_action_arrow_back"
                app:title="@string/filter"
                app:titleTextColor="@color/colorToolbarTitle" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_expand_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_layout_button_margin"
                    android:layout_marginTop="@dimen/filter_layout_button_margin"
                    android:layout_marginEnd="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/item_note_foreground"
                    android:padding="@dimen/filter_layout_tv_padding"
                    android:visibility="@{viewmodel.bTagsIsEmpty ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/tv_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tags"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_tags_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/filter_layout_dropdown_margin"
                        android:contentDescription="@string/dropdown"
                        android:src="@drawable/ic_action_keyboard_arrow_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_tags"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/tags_expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewmodel.bTagsIsEmpty ? View.GONE : View.VISIBLE}"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_checkable_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layout_constraintTop_toBottomOf="@id/top_divider"
                        tools:listitem="@layout/item_simple_checkable_tag" />
                </net.cachapa.expandablelayout.ExpandableLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_expand_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_layout_button_margin"
                    android:layout_marginTop="@dimen/filter_layout_button_margin"
                    android:layout_marginEnd="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/item_note_foreground"
                    android:padding="@dimen/filter_layout_tv_padding">

                    <TextView
                        android:id="@+id/tv_colors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_colors_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/filter_layout_dropdown_margin"
                        android:contentDescription="@string/dropdown"
                        android:src="@drawable/ic_action_keyboard_arrow_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_colors"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/colors_expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_checkable_colors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_checkable_color" />
                </net.cachapa.expandablelayout.ExpandableLayout>

                <Switch
                    android:id="@+id/switch_union_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_layout_button_margin"
                    android:layout_marginTop="@dimen/filter_layout_button_margin"
                    android:layout_marginEnd="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:foreground="@drawable/item_note_foreground"
                    android:gravity="center_vertical"
                    android:padding="@dimen/filter_fragment_switch_padding"
                    android:text="@string/union_conditions"
                    android:textColor="@color/colorBlackAlpha"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_only_with_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_layout_button_margin"
                    android:layout_marginTop="@dimen/filter_layout_button_margin"
                    android:layout_marginEnd="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:foreground="@drawable/item_note_foreground"
                    android:gravity="center_vertical"
                    android:padding="@dimen/filter_fragment_switch_padding"
                    android:text="@string/only_with_picture"
                    android:textColor="@color/colorBlackAlpha"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_apply_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_layout_button_margin"
                    android:layout_marginTop="@dimen/filter_layout_button_margin"
                    android:layout_marginEnd="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:foreground="@drawable/item_note_foreground"
                    android:onClick="@{(view) -> viewmodel.applyFilter()}"
                    android:text="@string/apply_filter"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btn_reset_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/filter_layout_button_margin"
                    android:background="@drawable/item_note_background"
                    android:foreground="@drawable/item_note_foreground"
                    android:onClick="@{(view) -> viewmodel.resetFilter()}"
                    android:text="@string/reset_filter"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>